--- a/src/components/Math.module.scss
+++ b/src/components/Math.module.scss
@@ -4,6 +4,7 @@
     background-color: $color-content-math-block-background;
     margin-left: -2.1rem;
     margin-right: -2.1rem;
+    -ms-overflow-style: none;
     overflow-x: scroll;
     padding: 2.1rem;
 
