--- a/src/components/TableOfContents.module.scss
+++ b/src/components/TableOfContents.module.scss
@@ -34,6 +34,7 @@
         margin-bottom: 1.8rem;
         margin-left: 2.1rem;
         margin-right: 2.1rem;
+        -ms-overflow-style: none;
         overflow-y: scroll;
 
         ol {
@@ -46,9 +47,9 @@
             li {
                 counter-increment: ordered-list;
                 margin-bottom: 1.6rem;
+                padding: 0;
                 text-align: right;
                 text-transform: uppercase;
-                padding: 0;
 
                 &:last-child {
                     margin-bottom: 0;
